# remote-ui

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  README.md  cpplint.sh  remote-ui.pro  version.txt.in
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  code_guidelines.yml
docs/: App startup diagram.drawio  README.md  cross-compile.md  install.md  startup.md  static-compile.md
licenses/: remote-ui_licenses.md
resources/icons/: icon-mapping.json
resources/mac/: Info.plist  UC.icns
resources/qrc/: button-simulator.qrc  icons.qrc  images.qrc  keyboard.qrc  main.qrc  translations.qrc
resources/translations/: da_DK.ts  de_CH.ts  de_DE.ts  en_US.ts  es_ES.ts  fr_FR.ts  hu_HU.ts  it_IT.ts  nl_NL.ts  no_NO.ts  pl_PL.ts  pt_PT.ts  sv_SE.ts
src/: logging.cpp  logging.h  main.cpp  util.cpp  util.h  voice.cpp  voice.h
src/config/: config.cpp  config.h
src/core/: core.cpp  core.h  enums.h  structs.h
src/dock/: configuredDocks.cpp  configuredDocks.h  discoveredDocks.cpp  discoveredDocks.h  dockController.cpp  dockController.h
src/hardware/: battery.cpp  battery.h  haptic.cpp  haptic.h  hardwareController.cpp  hardwareController.h  hardwareModel.h  info.cpp  info.h  power.cpp  power.h  touchSlider.cpp  touchSlider.h  wifi.cpp  wifi.h
src/integration/: confirmationPage.cpp  confirmationPage.h  integrationController.cpp  integrationController.h  integrationDrivers.cpp  integrationDrivers.h  integrations.cpp  integrations.h  (+2 more)
test/: CMakeLists.txt
test/common/: CMakeLists.txt  test_util.cpp
(+259 files in other folders)
